--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ test/data/legacy_modules.t7
 test/data/gpu_tensors.pt
 test/htmlcov
 test/.coverage
+.ipynb_checkpoints/
 */*.pyc
 */**/*.pyc
 */**/**/*.pyc
